update responsive codes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="overLay"></div>
+
     <nav>
       <img src="./assets/logo.webp" alt="" class="logo" />
 
@@ -135,6 +136,12 @@
         <i class="lni lni-cart cart"></i>
         <i class="lni lni-user user"></i>
       </div>
+    </nav>
+
+    <nav class="mobileNav">
+      <img src="./assets/logo.webp" alt="" class="logo" />
+
+      <i class="lni lni-menu menu-burger"></i>
     </nav>
 
     <header>
